static/css/main.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Poppins", "Arial", "Helvetica Neue", sans-serif;
}

body {
    background-color: rgb(250, 224, 239);;
}


.main {
    margin: auto;
    margin-bottom: 12vh;
    width: fit-content;
}

.main_box {
    margin: auto;
    padding: 1vh;
    background-color: rgb(245, 153, 210);
    border-radius: 6px;
    width: fit-content;
    box-shadow: 12px 12px 12px rgb(154, 106, 158);
}

.row_class {
    height: 14vh
}

.column_class {
    width: 12vh;
    height: 12vh;
    line-height: 12vh;
    text-align: center;
    float: left;
    font-size: 1.5rem;
    margin: 1vh;
    color: white;
    border-radius: 3px;
    background-color: rgb(146, 80, 146);
    box-shadow: 4px 4px 4px rgb(153, 100, 144);
}

.bt_main {
    width: 12vh;
    height: 12vh;
    line-height: 12vh;
    text-align: center;
    float: left;
    font-size: 1.2rem;
    margin: 1vh;
    color: white;
    border-radius: 3px;
    background-color: rgb(146, 80, 146);   
}

.clear_all {
    width: inherit;
    height: 12vh;
    text-align: center;
    font-size: 1rem;
    padding: 3vh;
    margin: 1vh;
    color: white;
    border-radius: 3px;
    background-color: rgb(146, 80, 146);   
}



.move_button {
    padding: 1vh; 
    margin: auto;
}

.reset_button {
    margin: auto;
    width: inherit;
}


.game_name {
    font-size: 6vh;
    text-align: center;
    margin-top: 3vh;
    margin-bottom: 3vh;
    color: rgb(61, 3, 49);
}

.score {
    font-size: 6vh;
    text-align: center;
    margin-bottom: 3vh;
    color: rgb(61, 3, 49);
}


@media  screen and (max-width:768px) {
    .main_box {
        padding: 1vw;
    }
    .row_class {
        height: 16vw
    }
    
    .column_class {
        width: 14vw;
        height: 14vw;
        line-height: 14vw;
        margin: 1vw;
    }
    
    .bt_main {
        width: 14vw;
        height: 14vw;
        font-size: 1rem;
        line-height: 14vw;
        margin: 1vw;
    }
    
    .clear_all {
        height: 14vw;
        padding: 3vw;
        margin: 1vw;
    }

    .game_name {
        font-size: 6vw;
        margin-top: 3vw;
        margin-bottom: 3vw;
    }
    
    .score {
        font-size: 6vw;
        margin-bottom: 3vw;
    }
}

